[tool.poetry]
name = "gemstone"
version = "0.1.0"
description = ""
authors = ["terencepark123 <valley84265@yonsei.ac.kr>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
sqlmodel = "^0.0.6"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
